# marsrover

./: Dockerfile  README.md  marsrover.cabal  stack.yaml
app/: Main.hs
haskell/: marsrover.cabal
haskell/src/: Bot.hs  Commands.hs  Explore.hs  Headings.hs  Planet.hs
haskell/test/: Spec.hs
haskell/test/Tests/: Bot.hs  Explore.hs  Planet.hs
scala/: build.sbt
scala/src/main/scala/: Bot.scala  Commands.scala  Explore.scala  Headings.scala  Mission.scala  Planet.scala
scala/src/test/scala/: BotSpec.scala  ExplorationSpec.scala  MissionSpec.scala  PlanetSpec.scala
src/: Bot.hs  Commands.hs  Explore.hs  Lib.hs  Planet.hs
test/: Spec.hs
test/Tests/: Bot.hs  Commands.hs  Explore.hs  Planet.hs
