name:                marsrover
version:             0.1.0.0
synopsis:            A coding test
homepage:            https://github.com/rumblesan/marsrover#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          guy@rumblesan.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Bot
                     , Planet
                     , Commands
                     , Explore
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

executable marsrover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marsrover
  default-language:    Haskell2010

test-suite marsrover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , mtl
                     , marsrover
  other-modules:       Tests.Bot
                     , Tests.Planet
                     , Tests.Commands
                     , Tests.Explore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rumblesan/marsrover
